2011-08-30  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Update test expectations for userscripts/window-onerror-for-isolated-world-1.html

        * platform/chromium/userscripts/window-onerror-for-isolated-world-1-expected.txt:
        * userscripts/window-onerror-for-isolated-world-1-expected.txt:

2011-08-30  Oliver Varga  <voliver@inf.u-szeged.hu>

        [Qt] 3 test started crashing somewhere between r93878-r93935
        https://bugs.webkit.org/show_bug.cgi?id=67197

        Unreviewed gardening.

        * platform/qt/Skipped:

2011-08-30  Ryosuke Niwa  <rniwa@webkit.org>

        lastChangeWasUserEdit continues to return true when innerText or textContent is modified
        https://bugs.webkit.org/show_bug.cgi?id=67183

        Reviewed by Kent Tamura.

        Two test cases now pass.

        * fast/forms/textfield-lastchange-was-useredit-expected.txt:

2011-08-29  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: wrong script display name when there is a slash in its URL query parameters
        https://bugs.webkit.org/show_bug.cgi?id=67120

        Reviewed by Pavel Feldman.

        * inspector/debugger/scripts-sorting.html:
        * platform/chromium/inspector/debugger/scripts-sorting-expected.txt:

2011-08-30  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Update window.onerror tests after r94061 to match new semantics
        of window.onerror return value.

        * fast/workers/resources/shared-worker-script-error.js:
        * http/tests/security/cross-origin-script-window-onerror-redirected.html:
        * http/tests/security/cross-origin-script-window-onerror.html:
        * userscripts/window-onerror-for-isolated-world-1.html:
        * userscripts/window-onerror-for-isolated-world-2.html:

2011-08-30  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Update Chromium test expectations for new test.

        * platform/chromium/fast/events/window-onerror13-expected.txt: Added.
