@@ -1,140 +1,0 @@
-Tests that computed styles expand and allow tracing to style rules.
-
-==== Computed style for ID1 ====
-[expanded]  ()
-background-attachment: scroll;
-    #id1 - initial styles-computed-trace.html:23
-background-clip: border-box;
-    #id1 - initial styles-computed-trace.html:23
-background-color: gray;
-    #id1 - gray styles-computed-trace.html:23
-    /-- overloaded --/ #id1 - black styles-computed-trace.html:18
-    /-- overloaded --/ #id1 - green styles-computed-trace.html:13
-background-image: none;
-    #id1 - initial styles-computed-trace.html:23
-background-origin: padding-box;
-    #id1 - initial styles-computed-trace.html:23
-display: block;
-    div - block user agent stylesheet
-font-family: Courier;
-    #id1 - Courier styles-computed-trace.html:18
-    /-- overloaded --/ #id1 - Times styles-computed-trace.html:13
-    /-- overloaded --/ body - Arial styles-computed-trace.html:4
-text-decoration: underline;
-    div - underline styles-computed-trace.html:9
-
-[expanded] element.style { ()
-
-
-==== Computed style for ID2 ====
-[expanded]  ()
-background-color: blue;
-    #id2 - blue styles-computed-trace.html:27
-display: block;
-    div - block user agent stylesheet
-font-family: Courier;
-    #id2 - Courier styles-computed-trace.html:27
-    /-- overloaded --/ #id1 - Courier styles-computed-trace.html:18
-    /-- overloaded --/ #id1 - Times styles-computed-trace.html:13
-    /-- overloaded --/ body - Arial styles-computed-trace.html:4
-text-decoration: underline;
-    /-- overloaded --/ #id2 - invalidvalue styles-computed-trace.html:27
-    div - underline styles-computed-trace.html:9
-
-[expanded] element.style { ()
-
-
-==== Computed style for ID3 ====
-[expanded]  ()
--webkit-appearance: button;
-    button - button user agent stylesheet
--webkit-box-align: center;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - center user agent stylesheet
-background-color: silver;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - buttonface user agent stylesheet
-border-bottom-color: silver;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - buttonface user agent stylesheet
-border-bottom-style: outset;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - outset user agent stylesheet
-border-bottom-width: 2px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 2px user agent stylesheet
-border-left-color: silver;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - buttonface user agent stylesheet
-border-left-style: outset;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - outset user agent stylesheet
-border-left-width: 2px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 2px user agent stylesheet
-border-right-color: silver;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - buttonface user agent stylesheet
-border-right-style: outset;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - outset user agent stylesheet
-border-right-width: 2px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 2px user agent stylesheet
-border-top-color: silver;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - buttonface user agent stylesheet
-border-top-style: outset;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - outset user agent stylesheet
-border-top-width: 2px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 2px user agent stylesheet
-box-sizing: border-box;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - border-box user agent stylesheet
-color: black;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - buttontext user agent stylesheet
-    /-- overloaded --/ input, textarea, keygen, select, button, isindex - initial user agent stylesheet
-cursor: default;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - default user agent stylesheet
-display: none;
-    button[hidden] - none 
-    /-- overloaded --/ input, textarea, keygen, select, button, isindex - inline-block user agent stylesheet
-font-family: Arial;
-    /-- overloaded --/ #id1 - Courier styles-computed-trace.html:18
-    /-- overloaded --/ #id1 - Times styles-computed-trace.html:13
-    /-- overloaded --/ body - Arial styles-computed-trace.html:4
-font-size: 13px;
-font-style: normal;
-font-variant: normal;
-font-weight: normal;
-letter-spacing: normal;
-    input, textarea, keygen, select, button, isindex - normal user agent stylesheet
-line-height: normal;
-    input, textarea, keygen, select, button, isindex - normal user agent stylesheet
-margin-bottom: 2px;
-    input, textarea, keygen, select, button, isindex - 0em user agent stylesheet
-margin-left: 2px;
-    input, textarea, keygen, select, button, isindex - 0em user agent stylesheet
-margin-right: 2px;
-    input, textarea, keygen, select, button, isindex - 0em user agent stylesheet
-margin-top: 2px;
-    input, textarea, keygen, select, button, isindex - 0em user agent stylesheet
-padding-bottom: 1px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 1px user agent stylesheet
-    /-- overloaded --/ input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 3px user agent stylesheet
-padding-left: 6px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 6px user agent stylesheet
-    /-- overloaded --/ input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 6px user agent stylesheet
-padding-right: 6px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 6px user agent stylesheet
-    /-- overloaded --/ input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 6px user agent stylesheet
-padding-top: 1px;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 1px user agent stylesheet
-    /-- overloaded --/ input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - 2px user agent stylesheet
-text-align: center;
-    input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] ::-webkit-file-upload-button, button - center user agent stylesheet
-    /-- overloaded --/ input, textarea, keygen, select, button, isindex - -webkit-auto user agent stylesheet
-text-indent: 0px;
-    input, textarea, keygen, select, button, isindex - 0px user agent stylesheet
-text-shadow: none;
-    input, textarea, keygen, select, button, isindex - none user agent stylesheet
-text-transform: none;
-    input, textarea, keygen, select, button, isindex - none user agent stylesheet
-word-spacing: 0px;
-    input, textarea, keygen, select, button, isindex - normal user agent stylesheet
-
-[expanded] element.style { ()
-
-======== Matched CSS Rules ========
-[expanded] button[hidden] { ()
-display: none;
-
-
-
